--- a/frame-server/server/web/public/accessible/styles/style.css
+++ b/frame-server/server/web/public/accessible/styles/style.css
@@ -3,10 +3,10 @@
 /* *               header                * */
 /* *************************************** */
 
-main {
+/*main {
   min-height: calc(100vh - 325px);
   margin-bottom: 50px;
-}
+}*/
 
 .fullWidth {
   width: 100%;
