--- a/frame-server/server/web/views/surveyuserinfo_accessible.ejs
+++ b/frame-server/server/web/views/surveyuserinfo_accessible.ejs
@@ -10,16 +10,15 @@
     <div>Survey Id:</div>
     <div id="surveyId"><%= createdSurveyId %></div>
   </div>
+
+<!--Your custom code goes here-->
+
   <div id="template_head">
-    <div id="questionnaire" class="container">
+    <form id="questionnaire" class="container" action="#" data-validationgroup>
       <h4>Before we begin the questionnaire, please answer the following questions</h4><br>
-      <div id="answer-error" class="text-center hidden error row-fluid">
-        <div class="span12 error"><strong><sup>*</sup> Please answer all the questions below to proceed</strong></div>
-      </div>
       <br>
       <%- include('./partials/question_renderer', {questions: questions}); %>
-
-    </div>
+    </form>
   </div>
 
   <!--Buttons Section-->
@@ -27,20 +26,21 @@
     <div class="col-md-6 col-md-offset-3">
       <button id="skipButton" data-style="slide-left" data-color="gray"
                 class="btn btn-primary component_center skip pull-left ladda-button"><span class="ladda-label">Skip</span></button>
-
+    </div>
+    <div class="col-md-6">
       <button id="nextButtonWithSkip" data-style="slide-left" data-color="blue" data-validationtrigger tabindex="21"
-              class="btn btn-primary component_center next ladda-button pull-right"><span class="ladda-label">Next</span></button>
+                class="btn btn-primary component_center next ladda-button pull-right"><span class="ladda-label">Next</span></button>
     </div>
   </div>
 
   <div id="button-panel-without-skip" class="container skip-panel">
-
     <div class="col-md-6 col-md-offset-3">
       <button id="nextButtonWithoutSkip" data-style="slide-left" data-color="blue" data-validationtrigger tabindex="21"
               class="btn btn-primary next ladda-button pull-right"><span class="ladda-label">Next</span></button>
     </div>
   </div>
 
+<!--
   <div id="question-error" class="hidden error container">
     <div class="col-md-6 col-md-offset-3 error"><strong class="pull-right"><sup>*</sup> Please select one of the options above or press Skip to
         proceed</strong></div>
@@ -50,8 +50,12 @@
     <div id="answer-error" class="hidden error row-fluid">
       <div class="span12 error"><strong><sup>*</sup> Questions still unanswered. Please answer all the questions above to proceed.</strong></div>
     </div>
-  </div>
+  </div>-->
+
+
 </main>
+
+
 
 <a href="#" class="scrollToTop" alt="Scroll To Top"><span class="sr-only">Scroll To Top</span></a>
 <%- include('./partials/footer_accessible'); %>
@@ -108,7 +112,7 @@
 
     var basil = new window.Basil();
     var cookie = basil.get('cookie');
-    var userId = JSON.parse(cookie).session.userId;
+    var userId = cookie.session.userId; <!--//JSON.parse(cookie).session.userId;-->
 
     demographicInfo.surveyId = $("#surveyId")[0].innerText;
 
@@ -190,14 +194,11 @@
     getNextQuestion(l, true, "<%= configUrl %>");
   });
 
-  $("#skipButton").on("click", function () {
-    var l = Ladda.create($('#skipButton')[0]);
-    l.start();
-    $("#question-error").addClass('hidden');
-    //Skip is only shown for a question
-    getNextQuestion(l, true, "<%= configUrl %>");
-  });
 </script>
+
+<script src="/public/js/formvalidatorconfig.js"></script>
+<script src="/public/js/formvalidator.js"></script>
+
 <script src="/public/js/accessible/globalassets/scripts/assets.responsive.js"></script>
 <script src="/public/js/accessible/share/4.0/js/sharewidget-4.0.js"></script>
 <script type="text/javascript" src="/public/js/accessible/slick-1.5.7/slick.min.js"></script>
