Fixed css in demographics, cookie fetch and Skip/Next css to conform with LIBRE-RESEARCH

--- a/frame-server/server/web/views/login_accessible.ejs
+++ b/frame-server/server/web/views/login_accessible.ejs
@@ -55,7 +55,7 @@
             var pass = form2.value;
             $.ajax({
                 type: 'POST',
-                url: '<%= configUrl %>' + "api/login",
+                url: '<%= configUrl %>' + "/api/login",
                 data: {
                     username: usnm,
                     password: pass
