--- a/frame-server/server/web/views/partials/navbarWelcome.ejs
+++ b/frame-server/server/web/views/partials/navbarWelcome.ejs
@@ -27,7 +27,7 @@
 <script>
   $(function () {
     var basil = new window.Basil();
-    var cookie = JSON.parse(basil.get('cookie'));
+    var cookie = JSON.parse(basil.get('cookie'))
 
     $("#logout").on("click", function () {
       $.ajax({
