--- a/frame-server/server/web/views/partials/question_renderer.ejs
+++ b/frame-server/server/web/views/partials/question_renderer.ejs
@@ -46,7 +46,7 @@
   <% } %>
   <div class="demographic row bottomMargin15">
     <div class="col-md-6 col-md-offset-1">
-      <input type="text" name="other_" + + <%= questions[i].responseOptions[j - 1].name %> id="other-input"
+      <input type="text" name="other_" + <%= questions[i].responseOptions[j - 1].name %> id="other-input"
         %>
       />
     </div>
