Remove hardcoded project name references

--- a/frame-server/server/web/views/layout.ejs
+++ b/frame-server/server/web/views/layout.ejs
@@ -13,7 +13,7 @@
   <title><%=title%></title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <meta name="description" content="BYO-CAT | An adaptive survey for patients with "/>
+  <meta name="description" content="An adaptive survey for patients with "/>
   <meta name="keywords" content=""/>
   <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
 
