--- a/frame-server/server/web/views/partials/navbar.ejs
+++ b/frame-server/server/web/views/partials/navbar.ejs
@@ -15,12 +15,5 @@
     </div>
   </div>
   <div class="nav-bottom-border"></div>
-  <noscript>
-    <p id="js-off-message">
-      The page could not be loaded. The BYO-CAT Project
-      does not fully support browsers with &quot;JavaScript&quot; disabled. Please note
-      that if you choose to continue without enabling &quot;JavaScript&quot; certain functionalities
-      on this website may not be available.
-    </p>
-  </noscript>
+  <%- include('./noJavascript'); %>
 </div>
