--- a/frame-server/server/web/views/partials/footer.ejs
+++ b/frame-server/server/web/views/partials/footer.ejs
@@ -1,4 +1,4 @@
 
 <footer class="footer" role="contentinfo">
-	<img class="footer-logo" src= "/public/images/favicon.ico" >
+	<img class="footer-logo" src= "/public/images/<%=logoname%>" >
 </footer>
