--- a/frame-server/server/web/views/partials/footer_accessible.ejs
+++ b/frame-server/server/web/views/partials/footer_accessible.ejs
@@ -1,7 +1,7 @@
 <div class="footerCopyright">
   <div class="row">
     <div class="col-md-4 offset-md-6">
-      <img src= "/public/images/favicon.ico">
+      <img src= "/public/images/<%=logoname%>">
       <small>Copyright &copy; 2017 <a href="https://sail.bu.edu/">SAIL</a>.
       </small>
     </div>
